testsuite/bsc.interra/messages/EBadIfcType/EBadIfcType_polymorphic.bs.bsc-vcomp-out.expected
checking package dependencies
compiling EBadIfcType_polymorphic.bs
Error: "EBadIfcType_polymorphic.bs", line 23, column 0: (T0043)
  Bad top level type: polymorphic type: Prelude.Module (Prelude.Reg a)
